# rust_minecraft_mod_example

./: .gitignore  Cargo.toml  README.md  README_jp.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: main.rs
crates/builder/src/mixins/: minecraft_server.rs  mod.rs
crates/inject-macro/: Cargo.toml
crates/inject-macro/src/: lib.rs
crates/native-payloads/: Cargo.toml
crates/native-payloads/examples/: minecraft_server.rs
crates/native-payloads/src/: lib.rs
crates/wasm-payload/: Cargo.toml
crates/wasm-payload/src/: main.rs
crates/wasm-payloads/: Cargo.toml
