[workspace]
resolver = "3"
members  = ["crates/wasm-payload", "crates/builder"]

[workspace.package]
edition      = "2024"
rust-version = "1.95"

[workspace.dependencies]
crustf     = { path = "../crustf/crates/crustf" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "symbols"
