[workspace]
resolver = "3"
members  = ["crates/inject-macro", "crates/wasm-payloads", "crates/builder"]
# wasm-payloads は wasm32-unknown-unknown 専用なのでデフォルトビルドから除外。
# `cargo run -p builder` か `cargo build -p wasm-payloads --target wasm32-unknown-unknown`
# で明示的に呼び出す。
default-members = ["crates/inject-macro", "crates/builder"]

[workspace.package]
edition      = "2024"
rust-version = "1.95"

[workspace.dependencies]
crustf         = { git = "https://github.com/topi-banana/crustf" }
inject-macro   = { path = "crates/inject-macro" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
wasmparser     = "0.235"
cargo_metadata = "0.21"

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "symbols"
