[workspace]
resolver = "3"
members = ["crates/inject-macro", "crates/api", "crates/native-payloads", "crates/builder"]

[workspace.package]
edition = "2024"
rust-version = "1.95"

[workspace.dependencies]
crustf = { git = "https://github.com/topi-banana/crustf" }
inject-macro = { path = "crates/inject-macro" }
api = { path = "crates/api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
wasmparser = "0.248"
object = { version = "0.36", default-features = false, features = ["read", "std"] }
jni = { version = "0.21", default-features = false }
cargo_metadata = "0.21"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
