[package]
name = "builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
crustf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
wasmparser = { workspace = true }
cargo_metadata = { workspace = true }
zip = { version = "8", default-features = false, features = ["deflate"] }
