[package]
name = "native-payloads"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

autolib = false
autoexamples = false

[[example]]
name = "minecraft_server"
path = "examples/minecraft_server.rs"
crate-type = ["cdylib"]

[dependencies]
inject-macro = { workspace = true }
jni = { workspace = true }
